--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 # InfluxDB connection
-INFLUX_HOST=influxdb
-INFLUX_PORT=8086
-INFLUX_USER=speedmonitor
-INFLUX_PASSWORD=speedmonitor
-INFLUX_DB=internetspeed
-INFLUX_MEASUREMENT=internet_speed
-HOST_TAG=speedtest-monitor
+INFLUX_HOST=
+INFLUX_PORT=
+INFLUX_USER=
+INFLUX_PASSWORD=
+INFLUX_DB=
+INFLUX_MEASUREMENT=
+HOST_TAG=
 
 # CSV output (if using speedtest.py)
-CSV_PATH=/data/speedtest.csv
+CSV_PATH=
 
 # Grafana (UI para métricas)
-GRAFANA_PORT=3100
-GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=admin
+GRAFANA_PORT=
+GRAFANA_ADMIN_USER=
+GRAFANA_ADMIN_PASSWORD=
 
 # Frecuencia de medición (segundos)
-INTERVAL_SECONDS=300
+INTERVAL_SECONDS=
