--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,4 @@
 repos:
-  - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        args: ["--profile", "black"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.10
     hooks:
@@ -19,6 +14,11 @@ repos:
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.2
+    hooks:
+      - id: gitleaks
+        args: ["protect", "--no-banner", "--report-format", "json"]
   - repo: local
     hooks:
       - id: pytest
@@ -26,4 +26,9 @@ repos:
         entry: pytest --cov --maxfail=1
         language: system
         types: [python]
+        pass_filenames: false
+      - id: trivy
+        name: trivy fs
+        entry: trivy fs --quiet --exit-code 1 --skip-dirs .venv --skip-dirs chronograf-1.8.6-1 .
+        language: system
         pass_filenames: false
