configuraciones de validacion de codigo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ testpaths = ["tests"]
 [tool.coverage.run]
 branch = true
 source = ["."]
+
+[tool.mypy]
+python_version = "3.13"
+ignore_missing_imports = true
+check_untyped_defs = false
