--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,17 @@ repos:
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: https://github.com/pycqa/bandit
+    rev: 1.7.10
+    hooks:
+      - id: bandit
+        args: ["-q", "-r", "."]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        additional_dependencies: []
+        args: ["--ignore-missing-imports"]
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.18.2
     hooks:
@@ -32,3 +43,6 @@ repos:
         entry: trivy fs --quiet --exit-code 1 --skip-dirs .venv --skip-dirs chronograf-1.8.6-1 .
         language: system
         pass_filenames: false
+default_stages:
+  - commit
+  - push
