--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,5 +44,5 @@ repos:
         language: system
         pass_filenames: false
 default_stages:
-  - commit
-  - push
+  - pre-commit
+  - pre-push
