Move app into package and restrict bandit scope

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,10 +18,9 @@ repos:
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: ["-q", "-r", ".", "-x", ".venv,chronograf-1.8.6-1"]
+        args: ["-q", "-r", "app", "tests", "-f", "json"]
         language_version: python3
-        env:
-          PYTHONIOENCODING: "utf-8"
+        pass_filenames: false
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
